--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@ title: Daniel Michelson
 
   <h1>Publications</h1>
   <ul class="posts">
-    <li><span>11 December 2020</span> &raquo; <a href="papers/GalvanPena-Leon-et-al_biorxiv_2020.pdf">Galvan-Pena S, Leon J, et al. <i>"Profound Treg perturbations correlate with COVID-19 severity."</i> <b>bioRxiv.</b> 2020</a></li>
+    <li><span>16 August 2021</span> &raquo; <a href="papers/Bansal-et-al_PNAS_2021.pdf">Bansal K, et al. <i>"Profound Treg perturbations correlate with COVID-19 severity."</i> <b>PNAS.</b> 2021</a></li>
+  </ul>
+  <ul class="posts">
+    <li><span>16 July 2021</span> &raquo; <a href="papers/GalvanPena-Leon-et-al_PNAS_2021.pdf">Galvan-Pena S, Leon J, et al. <i>"Profound Treg perturbations correlate with COVID-19 severity."</i> <b>PNAS.</b> 2021</a></li>
   </ul>
   <ul class="posts">
     <li><span>17 December 2019</span> &raquo; <a href="papers/Dinesh-et-al_EJI_2019.pdf">Dinesh R, et al. <i>"Transcription factor binding at immunoglobulin enhancers is linked to somatic hypermutation targeting."</i> <b>EJI.</b> 2019</a></li>
