--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Daniel Michelson
 
   <h1>Publications</h1>
   <ul class="posts">
-    <li><span>16 August 2021</span> &raquo; <a href="papers/Bansal-et-al_PNAS_2021.pdf">Bansal K, et al. <i>"Profound Treg perturbations correlate with COVID-19 severity."</i> <b>PNAS.</b> 2021</a></li>
+    <li><span>16 August 2021</span> &raquo; <a href="papers/Bansal-et-al_PNAS_2021.pdf">Bansal K, et al. <i>"Aire regulates chromatin looping by evicting CTCF from domain boundaries and favoring accumulation of cohesin on superenhancers."</i> <b>PNAS.</b> 2021</a></li>
   </ul>
   <ul class="posts">
     <li><span>16 July 2021</span> &raquo; <a href="papers/GalvanPena-Leon-et-al_PNAS_2021.pdf">Galvan-Pena S, Leon J, et al. <i>"Profound Treg perturbations correlate with COVID-19 severity."</i> <b>PNAS.</b> 2021</a></li>
