--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Daniel Michelson
 
   <h1>Publications</h1>
    <ul class="posts">
-    <li><span>29 September 2021</span> &raquo; <a href="papers/Leon-Michelson-Olejnik-Chowdhary-Oh-et-al_bioRxiv_2021.pdf">Leon J*, Michelson DA*, Olejnik J*, Chowdhary K*, Oh HS*, et al. <i>"A virus-specific monocyte inflammatory phenotype is induced by SARS-CoV2 at the immune-epithelial interface."</i> <b>bioRxiv.</b> 2021</a></li> 
+    <li><span>4 January 2022</span> &raquo; <a href="papers/Leon-Michelson-Olejnik-Chowdhary-Oh-et-al_PNAS_2021.pdf">Leon J*, Michelson DA*, Olejnik J*, Chowdhary K*, Oh HS*, et al. <i>"A virus-specific monocyte inflammatory phenotype is induced by SARS-CoV2 at the immune-epithelial interface."</i> <b>PNAS.</b> 2021</a></li> 
   </ul>
   <ul class="posts">
     <li><span>16 August 2021</span> &raquo; <a href="papers/Bansal-et-al_PNAS_2021.pdf">Bansal K, et al. <i>"Aire regulates chromatin looping by evicting CTCF from domain boundaries and favoring accumulation of cohesin on superenhancers."</i> <b>PNAS.</b> 2021</a></li>
