--- a/_posts/2019-09-16-hello-world.html
+++ b/_posts/2019-09-16-hello-world.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div id="post">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <p>hello word</p>
 <p>this is my first post!</p>
 <p>i&#8217;m just getting the hang of things here</p>
