--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Daniel Michelson
 ---
 
 <div id="home">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   <h1>Bio</h1>
   <ul class="posts">
 	<p> Welcome to my web home! I'm an MD/PhD student at Harvard and MIT, studying for my MD in the Health Sciences and Technology program and my PhD in the lab of Diane Mathis and Christophe Benoist.
