--- a/_posts/2019-09-16-hello-world.html
+++ b/_posts/2019-09-16-hello-world.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <div id="post">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <p>hello word</p>
