--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@ layout: default
 title: Daniel Michelson
 ---
 
-<div id="home">
+<head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<div id="home">
   <h1>Bio</h1>
   <ul class="posts">
 	<p> Welcome to my web home! I'm an MD/PhD student at Harvard and MIT, studying for my MD in the Health Sciences and Technology program and my PhD in the lab of Diane Mathis and Christophe Benoist.
