--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ title: Daniel Michelson
 
   <h1>Publications</h1>
    <ul class="posts">
+    <li>&raquo; <a href="https://authors.elsevier.com/c/1fFpKL7PXiopT">Michelson DA, et al. <i>"Thymic epithelial cells co-opt lineage-defining transcription factors to eliminate autoreactive T cells."</i> <b>Cell.</b> 2022</a></li> 
+  </ul>
+   <ul class="posts">
     <li>&raquo; <a href="papers/Leon-Michelson-Olejnik-Chowdhary-Oh-et-al_PNAS_2021.pdf">Leon J*, Michelson DA*, Olejnik J*, Chowdhary K*, Oh HS*, et al. <i>"A virus-specific monocyte inflammatory phenotype is induced by SARS-CoV2 at the immune-epithelial interface."</i> <b>PNAS.</b> 2022</a></li> 
   </ul>
   <ul class="posts">
