--- a/index.html
+++ b/index.html
@@ -22,20 +22,23 @@ title: Daniel Michelson
   </ul>
 
   <h1>Publications</h1>
+  <ul class="posts">
+    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/36008259/">Michelson DA and Mathis D. <i>"Thymic mimetic cells: tolerogenic masqueraders."</i> <b>Trends Immunol.</b> 2022</a></li> 
+  </ul>
    <ul class="posts">
-    <li>&raquo; <a href="https://authors.elsevier.com/c/1fFpKL7PXiopT">Michelson DA, et al. <i>"Thymic epithelial cells co-opt lineage-defining transcription factors to eliminate autoreactive T cells."</i> <b>Cell.</b> 2022</a></li> 
+    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/35714609/">Michelson DA, et al. <i>"Thymic epithelial cells co-opt lineage-defining transcription factors to eliminate autoreactive T cells."</i> <b>Cell.</b> 2022</a></li> 
   </ul>
    <ul class="posts">
-    <li>&raquo; <a href="papers/Leon-Michelson-Olejnik-Chowdhary-Oh-et-al_PNAS_2021.pdf">Leon J*, Michelson DA*, Olejnik J*, Chowdhary K*, Oh HS*, et al. <i>"A virus-specific monocyte inflammatory phenotype is induced by SARS-CoV2 at the immune-epithelial interface."</i> <b>PNAS.</b> 2022</a></li> 
+    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/34969849/">Leon J*, Michelson DA*, Olejnik J*, Chowdhary K*, Oh HS*, et al. <i>"A virus-specific monocyte inflammatory phenotype is induced by SARS-CoV2 at the immune-epithelial interface."</i> <b>PNAS.</b> 2022</a></li> 
   </ul>
   <ul class="posts">
-    <li>&raquo; <a href="papers/Bansal-et-al_PNAS_2021.pdf">Bansal K, et al. <i>"Aire regulates chromatin looping by evicting CTCF from domain boundaries and favoring accumulation of cohesin on superenhancers."</i> <b>PNAS.</b> 2021</a></li>
+    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/34518235/">Bansal K, et al. <i>"Aire regulates chromatin looping by evicting CTCF from domain boundaries and favoring accumulation of cohesin on superenhancers."</i> <b>PNAS.</b> 2021</a></li>
   </ul>
   <ul class="posts">
-    <li>&raquo; <a href="papers/GalvanPena-Leon-et-al_PNAS_2021.pdf">Galvan-Pena S*, Leon J*, et al. <i>"Profound Treg perturbations correlate with COVID-19 severity."</i> <b>PNAS.</b> 2021</a></li>
+    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/34433692/">Galvan-Pena S*, Leon J*, et al. <i>"Profound Treg perturbations correlate with COVID-19 severity."</i> <b>PNAS.</b> 2021</a></li>
   </ul>
   <ul class="posts">
-    <li>&raquo; <a href="papers/Dinesh-et-al_EJI_2019.pdf">Dinesh R, et al. <i>"Transcription factor binding at immunoglobulin enhancers is linked to somatic hypermutation targeting."</i> <b>EJI.</b> 2019</a></li>
+    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/31821534/">Dinesh R, et al. <i>"Transcription factor binding at immunoglobulin enhancers is linked to somatic hypermutation targeting."</i> <b>EJI.</b> 2019</a></li>
   </ul>
 
   <h1>Code</h1>
