--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ title: Daniel Michelson
 
   <h1>Publications</h1>
   <ul class="posts">
+    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/36409920/">Michelson DA, Benoist C and Mathis D. <i>"CTLA-4 on thymic epithelial cells complements Aire for T cell central tolerance."</i> <b>PNAS</b> 2022</a></li> 
+  </ul>
+  <ul class="posts">
     <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/36008259/">Michelson DA and Mathis D. <i>"Thymic mimetic cells: tolerogenic masqueraders."</i> <b>Trends Immunol.</b> 2022</a></li> 
   </ul>
    <ul class="posts">
