--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ title: Daniel Michelson
 
   <h1>Publications</h1>
   <ul class="posts">
+    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/37399024/">Michelson DA, Zuo C, Verzi M, Benoist C and Mathis D. <i>"Hnf4 activates mimetic-cell enhancers to recapitulate gut and liver development within the thymus."</i> <b>J Exp Med</b> 2023</a></li> 
+  </ul>
+  <ul class="posts">
     <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/36409920/">Michelson DA, Benoist C and Mathis D. <i>"CTLA-4 on thymic epithelial cells complements Aire for T cell central tolerance."</i> <b>PNAS</b> 2022</a></li> 
   </ul>
   <ul class="posts">
