--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Daniel Michelson
   <h1>Bio</h1>
   <ul class="posts">
 	<p> Welcome to my web home! I'm an MD/PhD student at Harvard and MIT, studying for my MD in the Health Sciences and Technology program and my PhD in the lab of Diane Mathis and Christophe Benoist.
-	Broadly speaking, I'm interested in the intersection of immunology, genomics and medicine. In my graduate work, I'm studying the mechanisms that develop and maintain immune tolerance to self, and how breakdown of these mechanisms can lead to immunodeficiency and autoimmunity. </p>
+	Broadly speaking, I'm interested in the intersection of immunology, genomics and medicine. In my graduate work, I studied the mechanisms that develop and maintain immune tolerance to self, and how breakdown of these mechanisms can lead to immunodeficiency and autoimmunity. </p>
     <!-- <li><span>16 Sept 2019</span> &raquo; <a href="https://linkdotcom">Link: a link</a></li> -->
   </ul>
 
@@ -22,6 +22,12 @@ title: Daniel Michelson
   </ul>
 
   <h1>Publications</h1>
+  <ul class="posts">
+    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/38608315/">Michelson DA and Mathis D. <i>"Thymic mimetic cells: ontogeny as immunology."</i> <b>Annu Rev Cell Dev Biol</b> 2024</a></li> 
+  </ul>
+  <ul class="posts">
+    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/37932455/">Yaghi OK, et al. <i>"A discrete 'early-responder' stromal-cell subtype orchestrates immunocyte recruitment to injured tissue ."</i> <b>Nat Immunol</b> 2023</a></li> 
+  </ul>
   <ul class="posts">
     <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/37399024/">Michelson DA, Zuo C, Verzi M, Benoist C and Mathis D. <i>"Hnf4 activates mimetic-cell enhancers to recapitulate gut and liver development within the thymus."</i> <b>J Exp Med</b> 2023</a></li> 
   </ul>
