update website to plaintext

--- a/index.html
+++ b/index.html
@@ -1,61 +1,28 @@
----
-layout: default
-title: Daniel Michelson
----
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=0.9">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<div id="home">
-  <h1>Bio</h1>
-  <ul class="posts">
-	<p> Welcome to my web home! I'm an MD/PhD student at Harvard and MIT, studying for my MD in the Health Sciences and Technology program and my PhD in the lab of Diane Mathis and Christophe Benoist.
-	Broadly speaking, I'm interested in the intersection of immunology, genomics and medicine. In my graduate work, I studied the mechanisms that develop and maintain immune tolerance to self, and how breakdown of these mechanisms can lead to immunodeficiency and autoimmunity. </p>
-    <!-- <li><span>16 Sept 2019</span> &raquo; <a href="https://linkdotcom">Link: a link</a></li> -->
-  </ul>
 
-  <h1>Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+<body>
 
-  <h1>Publications</h1>
-  <ul class="posts">
-    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/38608315/">Michelson DA and Mathis D. <i>"Thymic mimetic cells: ontogeny as immunology."</i> <b>Annu Rev Cell Dev Biol</b> 2024</a></li> 
-  </ul>
-  <ul class="posts">
-    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/37932455/">Yaghi OK, et al. <i>"A discrete 'early-responder' stromal-cell subtype orchestrates immunocyte recruitment to injured tissue ."</i> <b>Nat Immunol</b> 2023</a></li> 
-  </ul>
-  <ul class="posts">
-    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/37399024/">Michelson DA, Zuo C, Verzi M, Benoist C and Mathis D. <i>"Hnf4 activates mimetic-cell enhancers to recapitulate gut and liver development within the thymus."</i> <b>J Exp Med</b> 2023</a></li> 
-  </ul>
-  <ul class="posts">
-    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/36409920/">Michelson DA, Benoist C and Mathis D. <i>"CTLA-4 on thymic epithelial cells complements Aire for T cell central tolerance."</i> <b>PNAS</b> 2022</a></li> 
-  </ul>
-  <ul class="posts">
-    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/36008259/">Michelson DA and Mathis D. <i>"Thymic mimetic cells: tolerogenic masqueraders."</i> <b>Trends Immunol.</b> 2022</a></li> 
-  </ul>
-   <ul class="posts">
-    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/35714609/">Michelson DA, et al. <i>"Thymic epithelial cells co-opt lineage-defining transcription factors to eliminate autoreactive T cells."</i> <b>Cell.</b> 2022</a></li> 
-  </ul>
-   <ul class="posts">
-    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/34969849/">Leon J*, Michelson DA*, Olejnik J*, Chowdhary K*, Oh HS*, et al. <i>"A virus-specific monocyte inflammatory phenotype is induced by SARS-CoV2 at the immune-epithelial interface."</i> <b>PNAS.</b> 2022</a></li> 
-  </ul>
-  <ul class="posts">
-    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/34518235/">Bansal K, et al. <i>"Aire regulates chromatin looping by evicting CTCF from domain boundaries and favoring accumulation of cohesin on superenhancers."</i> <b>PNAS.</b> 2021</a></li>
-  </ul>
-  <ul class="posts">
-    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/34433692/">Galvan-Pena S*, Leon J*, et al. <i>"Profound Treg perturbations correlate with COVID-19 severity."</i> <b>PNAS.</b> 2021</a></li>
-  </ul>
-  <ul class="posts">
-    <li>&raquo; <a href="https://pubmed.ncbi.nlm.nih.gov/31821534/">Dinesh R, et al. <i>"Transcription factor binding at immunoglobulin enhancers is linked to somatic hypermutation targeting."</i> <b>EJI.</b> 2019</a></li>
-  </ul>
+<h2>Daniel A. Michelson</h2>
 
-  <h1>Code</h1>
-  <ul class="posts">
-	<p> Check out my code on <a href="https://github.com/dmichelson">Github</a>. </p>
-  </ul>
+<h1></h1>
+    <img src="headshots/825 - croppedv2 - downsampled.jpg" alt="Daniel Michelson headshot" width="200" height="200">
 
+<div style="max-width:600px; word-wrap:break-word;">
+<p> Welcome to my web home! I'm an MD/PhD student at Harvard and MIT, studying for my MD in the Health Sciences and Technology program and my PhD in immunology in the lab of Diane Mathis and Christophe Benoist.
+Broadly speaking, I'm interested in the intersection of immunology, genomics and medicine. In my graduate work, I studied the mechanisms that develop and maintain immune tolerance to self, and how breakdown of these mechanisms can lead to immunodeficiency and autoimmunity. </p>
 </div>
+
+<p> Check out my publications on <a href="https://scholar.google.com/citations?user=5VxkPHkAAAAJ">Google Scholar</a>. </p>
+
+<p> Check out my code on <a href="https://github.com/dmichelson">Github</a>. </p>
+
+<p> Follow me on <a href="https://x.com/michelson_da/">Twitter</a>. </p>
+
+</body>
+
+</html>
