--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2>Daniel A. Michelson</h2>
 
 <h1></h1>
-    <img src="headshots/828-cropped-downsampled.jpg.jpg" alt="Daniel Michelson headshot" width="202">
+    <img src="headshots/828-cropped-downsampled.jpg" alt="Daniel Michelson headshot" width="202">
 
 <div style="max-width:600px; word-wrap:break-word;">
 <p> Welcome to my web home! I'm an MD/PhD student at Harvard and MIT, studying for my MD in the Health Sciences and Technology program and my PhD in immunology in the lab of Diane Mathis and Christophe Benoist.
