--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="headshots/828-cropped-downsampled.jpg" alt="Daniel Michelson headshot" width="202">
 
 <div style="max-width:600px; word-wrap:break-word;">
-<p> Welcome to my web home! I'm an MD/PhD student at Harvard and MIT, studying for my MD in the Health Sciences and Technology program and my PhD in immunology in the lab of Diane Mathis and Christophe Benoist.
+<p> Welcome to my web home! I'm an MD/PhD student at Harvard and MIT, currently finishing my MD in the Health Sciences and Technology program. I earned my PhD in immunology in the lab of Diane Mathis and Christophe Benoist.
 Broadly speaking, I'm interested in the intersection of immunology, genomics and medicine. In my graduate work, I studied the mechanisms that develop and maintain immune tolerance to self, and how breakdown of these mechanisms can lead to immunodeficiency and autoimmunity. </p>
 </div>
 
