--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <img src="headshots/825 - croppedv2 - downsampled.jpg" alt="Daniel Michelson headshot" width="202" height="202">
 
 <div style="max-width:600px; word-wrap:break-word;">
-<p> Welcome to my web home! I'm an MD/PhD student at Harvard and MIT, studying for my MD in the Health Sciences and Technology program and my PhD in immunology in the lab of Diane Mathis and Christophe Benoist.
-Broadly speaking, I'm interested in the intersection of immunology, genomics and medicine. In my graduate work, I studied the mechanisms that develop and maintain immune tolerance to self, and how breakdown of these mechanisms can lead to immunodeficiency and autoimmunity. </p>
+<p> Welcome to my web home! I am currently a resident physician in internal medicine and a member of the Stanbury Physician-Scientist Pathway at Massachusetts General Hospital.
+I earned my MD in the Program in Health Sciences and Technology at Harvard/MIT and my PhD in immunology in the lab of Diane Mathis and Christophe Benoist at Harvard. 
+During my PhD, I studied the mechanisms that produce immunological self-tolerance in T cells, and how breakdown of these mechanisms can lead to autoimmunity.
+Previously, I worked in the lab of David Schatz at Yale, studying the molecular mechanisms that B cells use to generate high-affinity antibodies.
+Broadly speaking, I'm interested in the intersection of immunology, genomics and medicine, especially as they relate to immune-mediated diseases. </p>
 </div>
 
 <p> Check out my publications on <a href="https://scholar.google.com/citations?user=5VxkPHkAAAAJ">Google Scholar</a>. </p>
