--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 I earned my MD in the Program in Health Sciences and Technology at Harvard/MIT and my PhD in immunology in the lab of Diane Mathis and Christophe Benoist at Harvard. 
 During my PhD, I studied the mechanisms that produce immunological self-tolerance in T cells, and how breakdown of these mechanisms can lead to autoimmunity.
 Previously, I worked in the lab of David Schatz at Yale, studying the molecular mechanisms that B cells use to generate high-affinity antibodies.
-Broadly speaking, I am interested in the intersection of immunology, genomics and medicine, especially in relation to immune-mediated diseases. </p>
+Broadly speaking, I am interested in immunology, genomics and medicine, particularly as they relate to immune-mediated diseases. </p>
 </div>
 
 <p> Check out my publications on <a href="https://scholar.google.com/citations?user=5VxkPHkAAAAJ">Google Scholar</a>. </p>
